<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar_layout"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/qTitleOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/darkText"
            android:text="@string/firstQuestion"
            />

        <TextView
            android:id="@+id/answerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/liteText"
            android:text="@string/firstAnswer"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/qTitleTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/darkText"
            android:text="@string/secondQuestion"
            />

        <TextView
            android:id="@+id/answerTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans"
            android:textSize="14sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/liteText"
            android:text="@string/secondAnswer"
            />

        <TextView
            android:id="@+id/telegramGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans"
            android:textSize="14sp"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/VaccineAlert"
             />
        <TextView
            android:id="@+id/ptmfinder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans"
            android:textSize="14sp"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/PaytmVFinder"
            />
        <TextView
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_sans"
            android:textSize="14sp"
            android:clickable="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/vcovidTracker"
       />

    </LinearLayout>





            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/qTitleThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/darkText"
                    android:text="@string/thirdQuestion"
                    />

                <TextView
                    android:id="@+id/answerThree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/liteText"
                    android:text="@string/thirdAnswer"
                    />

                <TextView
                    android:id="@+id/jsonFile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/jsonFileLink"
                    />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/qTitleFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans_bold"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/darkText"
                    android:text="@string/fourthQuestion"
                    />

                <TextView
                    android:id="@+id/answerFour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/liteText"
                    android:text="@string/fourthAnswer"
                    />

                <TextView
                    android:id="@+id/cowin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/product_sans"
                    android:textSize="14sp"
                    android:clickable="true"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/cowinSite"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>