<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.pinFragment.PinCodeFragment">

    <include
        android:id="@+id/include"
        layout="@layout/heading_layout" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/include"
        app:layout_constraintStart_toEndOf="@+id/include"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/vaccination_center"
            android:textColor="@color/darkText"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/product_sans"
            android:text="@string/pinText"
            android:textColor="@color/liteText"
            android:textSize="14sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="23dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/product_sans"
            android:text="@string/enter_your_area_pincode"
            android:textColor="@color/darkText"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/edPincode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/card_background"
            android:hint="@string/_110040"
            android:paddingHorizontal="5dp" />

        <Button
            android:id="@+id/findBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/find" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>